; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_relocate_gitdir.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_relocate_gitdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [50 x i8] c"could not migrate git directory from '%s' to '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @relocate_gitdir(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i64 @rename(i8* %7, i8* %8)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = call i32 @_(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %13 = load i8*, i8** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @die_errno(i32 %12, i8* %13, i8* %14)
  br label %16

16:                                               ; preds = %11, %3
  %17 = load i8*, i8** %4, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @connect_work_tree_and_git_dir(i8* %17, i8* %18, i32 0)
  ret void
}

declare dso_local i64 @rename(i8*, i8*) #1

declare dso_local i32 @die_errno(i32, i8*, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @connect_work_tree_and_git_dir(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
